--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
   "background_color": "#0A0A0F",
   "theme_color": "#2e86ab",
   "orientation": "portrait",
-  "icons": [
+  "icons": []
     {
       "src": "icon-192.png",
       "sizes": "192x192",
