--- a/manifest.json
+++ b/manifest.json
@@ -7,16 +7,23 @@
   "background_color": "#0A0A0F",
   "theme_color": "#2e86ab",
   "orientation": "portrait",
-  "icons": []
+  "icons": [
     {
       "src": "icon-192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
       "src": "icon-512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
-  ]
+  ],
+  "categories": ["productivity", "utilities"],
+  "lang": "tr",
+  "dir": "ltr",
+  "scope": "/bilge/",
+  "prefer_related_applications": false
 }
