--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Bilge &amp; Alp Akıllı Asistan",
+  "name": "Bilge & Alp Akıllı Asistan",
   "short_name": "Bilge",
   "description": "Akıllı araç asistanı",
   "start_url": "/bilge/",
@@ -11,22 +11,12 @@
     {
       "src": "icon-192.png",
       "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/png"
     },
     {
       "src": "icon-512.png",
       "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/png"
     }
-  ],
-  "categories": [
-    "productivity",
-    "utilities"
-  ],
-  "lang": "tr",
-  "dir": "ltr",
-  "scope": "/bilge/",
-  "prefer_related_applications": false
+  ]
 }
